--- a/HTML and CSS/Introduction to HTML and CSS/lab1/06_images/styles.css
+++ b/HTML and CSS/Introduction to HTML and CSS/lab1/06_images/styles.css
@@ -17,7 +17,7 @@ body.cbody {
     background-position:top;
     background-size:cover;
     background-repeat: no-repeat; 
-    background-attachment: fixed; 
+    background-attachment: scroll; 
     opacity: 0.3; 
     z-index: -1; 
 }
